Se agrego una imagen para que se vea bonita

--- a/Calculadora/Calculadora.csproj
+++ b/Calculadora/Calculadora.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +79,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\premium_photo-1661886008804-9e5b219fc587.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ideativas-tlm-halloween-9862667.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\khirulislam898-city-4679928_1280.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
